Fix logo image source path in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="casino-container">
         <header>
-            <img src="scr/icon.ico" alt="Logo" class="logo">
+            <img src="src/icon.ico" alt="Logo" class="logo">
             <h1>EXYL Casino</h1>
         </header>
 
